feat: add deconnexion text and bg update

--- a/src/lib/assets/i18n/bg.json
+++ b/src/lib/assets/i18n/bg.json
@@ -22,13 +22,63 @@
     "risks": "Рискове",
     "title": "Преглед"
   },
+  "users": {
+    "new_user_button": "TO TRANSLATE - New user",
+    "first_name": "TO TRANSLATE - First name",
+    "last_name": "TO TRANSLATE - Last name",
+    "email": "TO TRANSLATE - Email",
+    "profile": "TO TRANSLATE - Profile",
+    "remove": "TO TRANSLATE - Delete",
+    "update": "TO TRANSLATE - Update",
+    "technical_admin": "TO TRANSLATE - Technical administrator",
+    "functional_admin": "TO TRANSLATE - Functional administrator",
+    "user": "TO TRANSLATE - User",
+    "remove_current_user_error_message": "TO TRANSLATE - You can't delete your own account.",
+    "remove_user_with_linked_pias_error_message": "TO TRANSLATE - Several PIAs are attached to this user, so you cannot delete him.",
+    "remove_last_functional_admin_error_message": "TO TRANSLATE - You cannot delete this user because at least one Technical Administrator account must remain.",
+    "add_new_user": "TO TRANSLATE - Add a new user",
+    "edit_user": "TO TRANSLATE - Edit an user",
+    "data": "TO TRANSLATE - Data",
+    "choose_profile": "TO TRANSLATE - Choose a profile for this user",
+    "cancel": "TO TRANSLATE - Cancel",
+    "continue": "TO TRANSLATE - Continue"
+  },
   "authentication": {
     "description": "Този софтуер, предоставен от <strong>френския надзорен орган по защита на данните (CNIL)</strong> е предназначен да подпомогне администраторите на данни в постигане и демонстриране на съответствие с ОРЗД. Той съдейства за правилно извършване на оценка на въздействието върху защитата на данните чрез прилагане на метода за оценка, разработен от френския надзорен орган CNIL.",
     "start": "Старт",
     "start_app": "Достъп до софтуера за ОВЗД (Beta)",
     "subtitle1": "Платформа за създаване <br> и управление на вашите ОВЗД",
     "subtitle2": "Инструменти за достъп и обяснения на термините",
-    "title": "Оценка на въздействието върху защитата на данните"
+    "title": "Оценка на въздействието върху защитата на данните",
+    "sign_in": "TO TRANSLATE - Sign in",
+    "login": "TO TRANSLATE - Login",
+    "password": "TO TRANSLATE - Password",
+    "forgotten_password": "TO TRANSLATE - Forgotten ?",
+    "create_account": "TO TRANSLATE - Sign up",
+    "sign_in_button": "TO TRANSLATE - Sign in",
+    "sign_out_button": "TO TRANSLATE - Sign out",
+    "saved_password": "TO TRANSLATE - Your password is saved. You can now sign in.",
+    "confirm": "TO TRANSLATE - Confirm",
+    "create_account2": "TO TRANSLATE - Create account",
+    "cancel": "TO TRANSLATE - Cancel",
+    "account_recovery": "TO TRANSLATE - Password recovery",
+    "confirmation": "TO TRANSLATE - Confirmation",
+    "wrong_confirmation": "TO TRANSLATE - Wrong confirmation",
+    "password_security": "TO TRANSLATE - Password security",
+    "12_characters": "TO TRANSLATE - 12 characters",
+    "uppercase": "TO TRANSLATE - Uppercase",
+    "lowercase": "TO TRANSLATE - Lowercase",
+    "special_character": "TO TRANSLATE - Special character",
+    "activation_code": "TO TRANSLATE - Activation code",
+    "wrong_activation_code": "TO TRANSLATE - (wrong)",
+    "continue": "TO TRANSLATE - Continue",
+    "transaction_error": "TO TRANSLATE - Unable to process your request.",
+    "email": "TO TRANSLATE - Email",
+    "wrong_email": "TO TRANSLATE - Wrong email",
+    "email_placeholder": "TO TRANSLATE - Email",
+    "recovery_code_message": "TO TRANSLATE - An email containing a code has been sent to this email. Please enter the code in the field below.",
+    "recovery_code": "TO TRANSLATE - Reset code",
+    "recovery_code_not_sent": "TO TRANSLATE - Unreceived code?"
   },
   "cartography": {
     "important": "Важно",
@@ -145,10 +195,11 @@
     "logo_title": "Оценка на въздействието върху поверителността (Оценка на въздействието върху защитата на данните)",
     "structures": "Образци на ОВЗД",
     "tools": {
+      "users": "TO TRANSLATE - Users",
+      "onboarding": "TO TRANSLATE - Restart tutorial",
       "about": "Относно",
       "accessibility": "Достъп при нарушено зрение (високо контрастни цветове, далтонизъм)",
       "settings": "Настройки",
-      "title": "Помощни инструменти",
       "url_setting": "Конфигурация на URL сървъра"
     }
   },
