--- a/src/lib/assets/i18n/de.json
+++ b/src/lib/assets/i18n/de.json
@@ -56,6 +56,7 @@
     "forgotten_password": "Vergessen?",
     "create_account": "Anlegen",
     "sign_in_button": "Anmelden",
+    "sign_out_button": "TO TRANSLATE - Sign out",
     "saved_password": "Kennwort wurde gespeichert. Sie können sich nun anmelden.",
     "confirm": "Bestätigen",
     "create_account2": "Benutzerkonto anlegen",
