--- a/src/lib/assets/i18n/it.json
+++ b/src/lib/assets/i18n/it.json
@@ -56,6 +56,7 @@
     "forgotten_password": "TO TRANSLATE - Forgotten ?",
     "create_account": "TO TRANSLATE - Sign up",
     "sign_in_button": "TO TRANSLATE - Sign in",
+    "sign_out_button": "TO TRANSLATE - Sign out",
     "saved_password": "TO TRANSLATE - Your password is saved. You can now sign in.",
     "confirm": "TO TRANSLATE - Confirm",
     "create_account2": "TO TRANSLATE - Create account",
