--- a/src/lib/assets/i18n/nl.json
+++ b/src/lib/assets/i18n/nl.json
@@ -56,6 +56,7 @@
     "forgotten_password": "Vergeten?",
     "create_account": "Registreren",
     "sign_in_button": "Aanmelden",
+    "sign_out_button": "TO TRANSLATE - Sign out",
     "saved_password": "Je wachtwoord werd opgeslagen. Je kunt nu aanmelden.",
     "confirm": "Bevestigen",
     "create_account2": "Account aanmaken",
