--- a/src/lib/assets/i18n/fr.json
+++ b/src/lib/assets/i18n/fr.json
@@ -77,7 +77,31 @@
     "email_placeholder": "Adresse email",
     "recovery_code_message": "Un email contenant un code a été envoyé à l'adresse indiquée. Veuillez entrer le code dans le champ ci-dessous.",
     "recovery_code": "Code de réinitialisation",
-    "recovery_code_not_sent": "Code non reçu ?"
+    "recovery_code_not_sent": "Code non reçu ?",
+    "errors": {
+      "create_account": {
+        "uuid": {
+          "404": "code d'activation erroné"
+        },
+        "password": {
+          "404": "Utilisateur non trouvé",
+          "406": "Mot de passe non conforme"
+        }
+      },
+      "account_recovery": {
+        "email": {
+          "404": "Utilisateur non trouvé",
+          "423": "Ce compte utilisateur n'à pas encore été activé"
+        },
+        "uuid": {
+          "404": "code de réinitialisation erroné"
+        },
+        "password": {
+          "404": "Utilisateur non trouvé",
+          "406": "Mot de passe non conforme"
+        }
+      }
+    }
   },
   "cartography": {
     "important": "Importante",
