add AR language + update other languages with AR language

--- a/src/lib/assets/i18n/ar.json
+++ b/src/lib/assets/i18n/ar.json
@@ -143,32 +143,33 @@
     "homepage_link": "تقييماتي الخاصة بأثر حماية البيانات",
     "knowledge_base_link": "قاعدة البيانات",
     "languages": {
+      "ar": "العربية",
       "bg": "български",
       "cnil_translations" : "الترجمات التي أنجزتها اللجنة الوطنية للمعلوماتية والحريات",
       "community_translations" : "الترجمات التي أنجزها الجماعة",
-      "cz" : "التشيكية",
-      "de": "الألمانية",
-      "dk": "الدانماركية",
+      "cz": "Česky",
+      "de": "Deutsch",
+      "dk": "Dansk",
       "dpa_translations" : "الترجمة التي تم اعتمادها في تقييم حماية البيانات ",
-      "el": "اليونانية",
-      "en": "الإنجليزية",
-      "es": "الإسبانية",
-      "et": "الإستونية",
-      "fi" : "الفنلندية",
-      "fr" : "الفرنسية",
-      "hr": "الكرواتية",
-      "hu" : "المجرية",
-      "it" : "الإيطالية",
-      "lt" : "الليتوانية",
-      "lv" : "اللاتفية",
-      "nl" : "الهولندية",
-      "no": "النرويجية",
+      "el": "Ελληνικά",
+      "en": "English",
+      "es": "Español",
+      "et": "Eesti keel",
+      "fi": "Suomi",
+      "fr": "Français",
+      "hr": "Hrvatski",
+      "hu": "Magyar",
+      "it": "Italiano",
+      "lt": "Lietuviškai",
+      "lv": "Latviešu valoda",
+      "nl": "Nederlands",
+      "no": "Norsk",
       "official_translation" : "النسخة الأصلية",
-      "pl": "البولندية",
-      "pt" : "البرتغالية",
-      "ro" : "الرومانية",
-      "sl" : "السلوفينية",
-      "sv" : "السويدية"
+      "pl": "Polski",
+      "pt": "Português",
+      "ro": "Română",
+      "sl": "Slovenščina",
+      "sv": "Svenska"
     },
     "logo_subtitle": "تقييم أثر الخصوصية",
     "logo_title" : "تقييم أثر حماية البيانات",
@@ -176,8 +177,8 @@
     "tools": {
       "about": "عن",
       "accessibility": "إمكانية وصول ذوي الإعاقة البصرية (ألوان ذات تباين قوي، ملائمة لعمى الألوان)",
+      "onboarding": "TO TRANSLATE - Restart tutorial",
       "settings" : "الإعدادات",
-      "title" : "الأدوات",
       "url_setting": "ضبط خادم محدد موقع الموارد المُوحّد(URL)",
       "users": "TO TRANSLATE - Users"
     }
