--- a/src/lib/assets/i18n/el.json
+++ b/src/lib/assets/i18n/el.json
@@ -143,6 +143,7 @@
     "homepage_link": "TO TRANSLATE - My PIAs",
     "knowledge_base_link": "Βάση γνώσεων",
     "languages": {
+      "ar": "العربية",
       "bg": "български",
       "cnil_translations": "Μεταφράσεις που παρείχε η CNIL",
       "community_translations": "Μεταφράσεις που παρείχε η κοινότητα",
