--- a/src/lib/assets/i18n/fi.json
+++ b/src/lib/assets/i18n/fi.json
@@ -143,6 +143,7 @@
     "homepage_link": "TO TRANSLATE - My PIAs",
     "knowledge_base_link": "Tietopankki",
     "languages": {
+      "ar": "العربية",
       "bg": "български",
       "cnil_translations": "CNIL:n tarjoamat käännökset",
       "community_translations": "Epäviralliset käännökset",
