--- a/src/lib/assets/i18n/hr.json
+++ b/src/lib/assets/i18n/hr.json
@@ -143,6 +143,7 @@
     "homepage_link": "TO TRANSLATE - My PIAs",
     "knowledge_base_link": "Baza znanja",
     "languages": {
+      "ar": "العربية",
       "bg": "български",
       "cnil_translations": "Prijevodi od strane CNIL-a",
       "community_translations": "Prijevodi od strane zajednice",
