--- a/src/lib/assets/i18n/hu.json
+++ b/src/lib/assets/i18n/hu.json
@@ -143,6 +143,7 @@
     "homepage_link": "TO TRANSLATE - My PIAs",
     "knowledge_base_link": "Tudásbázis",
     "languages": {
+      "ar": "العربية",
       "bg": "български",
       "cnil_translations": "A CNIL által biztosított fordítások",
       "community_translations": "Nem hivatalos fordítások",
