--- a/src/lib/assets/i18n/it.json
+++ b/src/lib/assets/i18n/it.json
@@ -143,6 +143,7 @@
     "homepage_link": "TO TRANSLATE - My PIAs",
     "knowledge_base_link": "Archivio",
     "languages": {
+      "ar": "العربية",
       "bg": "български",
       "cnil_translations": "Traduzioni fornite da CNIL",
       "community_translations": "Traduzioni fornite da soggetti diversi",
