--- a/src/lib/assets/i18n/lv.json
+++ b/src/lib/assets/i18n/lv.json
@@ -143,6 +143,7 @@
     "homepage_link": "Mani PIA",
     "knowledge_base_link": "Zināšanu bāze",
     "languages": {
+      "ar": "العربية",
       "bg": "български",
       "cnil_translations": "CNIL nodrošinātie tulkojumi",
       "community_translations": "Kopienas nodrošinātie tulkojumi",
