--- a/src/lib/assets/i18n/nl.json
+++ b/src/lib/assets/i18n/nl.json
@@ -143,6 +143,7 @@
     "homepage_link": "Mijn PIA's",
     "knowledge_base_link": "Kennisbank",
     "languages": {
+      "ar": "العربية",
       "bg": "български",
       "cnil_translations": "Vertalingen door de CNIL",
       "community_translations": "Vertalingen door de community",
