--- a/src/lib/assets/i18n/ro.json
+++ b/src/lib/assets/i18n/ro.json
@@ -143,6 +143,7 @@
     "homepage_link": "TO TRANSLATE - My PIAs",
     "knowledge_base_link": "Baza de cunoaștere",
     "languages": {
+      "ar": "العربية",
       "bg": "български",
       "cnil_translations": "Traduceri oferite de către CNIL",
       "community_translations": "Traduceri oferite de către Comunitate",
