--- a/src/lib/assets/i18n/bg.json
+++ b/src/lib/assets/i18n/bg.json
@@ -143,6 +143,7 @@
     "homepage_link": "Моите ОВЗД",
     "knowledge_base_link": "База знания",
     "languages": {
+      "ar": "العربية",
       "bg": "български",
       "cnil_translations": "Предоставени от CNIL преводи",
       "community_translations": "Преводи предоставени от общността",
