--- a/src/lib/assets/i18n/de.json
+++ b/src/lib/assets/i18n/de.json
@@ -143,6 +143,7 @@
     "homepage_link": "Meine DSFAs",
     "knowledge_base_link": "Wissensbasis",
     "languages": {
+      "ar": "العربية",
       "bg": "български",
       "cnil_translations": "Von der CNIL bereitgestellte Übersetzungen",
       "community_translations": "Von der Community bereitgestellte Übersetzungen",
