--- a/src/lib/assets/i18n/dk.json
+++ b/src/lib/assets/i18n/dk.json
@@ -143,6 +143,7 @@
     "homepage_link": "TO TRANSLATE - My PIAs",
     "knowledge_base_link": "Vidensbase",
     "languages": {
+      "ar": "العربية",
       "bg": "български",
       "cnil_translations": "Oversættelser af CNILs",
       "community_translations": "Community oversættelser",
