--- a/src/lib/assets/i18n/et.json
+++ b/src/lib/assets/i18n/et.json
@@ -143,6 +143,7 @@
     "homepage_link": "TO TRANSLATE - My PIAs",
     "knowledge_base_link": "Teadmiste pagas",
     "languages": {
+      "ar": "العربية",
       "bg": "български",
       "cnil_translations": "CNIL’i  esitatud tõlge",
       "community_translations": "Kogukondade tehtud tõlked",
