--- a/src/lib/assets/i18n/no.json
+++ b/src/lib/assets/i18n/no.json
@@ -143,6 +143,7 @@
     "homepage_link": "TO TRANSLATE - My PIAs",
     "knowledge_base_link": "Kunnskapsdatabase",
     "languages": {
+      "ar": "العربية",
       "bg": "български",
       "cnil_translations": "TO BE TRANSLATED - CNIL provided translations",
       "community_translations": "TO BE TRANSLATED - Community provided translations",
