--- a/src/lib/assets/i18n/pl.json
+++ b/src/lib/assets/i18n/pl.json
@@ -143,6 +143,7 @@
     "homepage_link": "Moje PIA",
     "knowledge_base_link": "Baza wiedzy",
     "languages": {
+      "ar": "العربية",
       "bg": "български",
       "cnil_translations": "Wersje przetłumaczone przez CNIL",
       "community_translations": "Wersja przetłumaczone przez społeczność",
