--- a/src/lib/assets/i18n/en.json
+++ b/src/lib/assets/i18n/en.json
@@ -86,6 +86,13 @@
       }
     }
   },
+  "users": {
+    "errors": {
+      "edit_user": {
+        "406": "The information provided when creating the account is invalid."
+      }
+    }
+  },
   "cartography": {
     "important": "Important",
     "legend1": "Planned or existing measures",
