--- a/src/lib/assets/i18n/nl.json
+++ b/src/lib/assets/i18n/nl.json
@@ -86,6 +86,13 @@
       }
     }
   },
+  "users": {
+    "errors": {
+      "edit_user": {
+        "406": "TO TRANSLATE - The information provided when creating the account is invalid."
+      }
+    }
+  },
   "cartography": {
     "important": "Belangrijk",
     "legend1": "Geplande of bestaande maatregelen",
