--- a/src/lib/assets/i18n/fr.json
+++ b/src/lib/assets/i18n/fr.json
@@ -64,7 +64,8 @@
       },
       "create_account": {
         "uuid": {
-          "404": "code d'activation erroné"
+          "404": "code d'activation erroné",
+          "403": "Ce compte est déjà activé"
         },
         "password": {
           "404": "Utilisateur non trouvé",
