feat: add new key for unauthorized error

--- a/src/lib/assets/i18n/en.json
+++ b/src/lib/assets/i18n/en.json
@@ -83,7 +83,8 @@
           "404": "User not found",
           "406": "The password does not meet the password policy requirements."
         }
-      }
+      },
+      "unauthorized": "You are not allowed to access this ressource."
     }
   },
   "users": {
