--- a/src/lib/assets/i18n/nl.json
+++ b/src/lib/assets/i18n/nl.json
@@ -83,7 +83,8 @@
           "404": "TO TRANSLATE - User not found",
           "406": "TO TRANSLATE - The password does not meet the password policy requirements."
         }
-      }
+      },
+      "unauthorized": "TO TRANSLATE - You are not allowed to access this ressource."
     }
   },
   "users": {
